<resources>
    <string name="app_name">Buddy</string>
    <string name="app_logo_name">请输入账号</string>
    <string name="app_logo_password">请输入密码</string>
    <string name="app_logo_regiter">请入验证码</string>
    <string name="app_logo_yzm">获取验证码</string>

    <string name="label_contacts">联系人</string>
    <string name="label_add">添加</string>
    <string name="label_delete">删除</string>
    <string name="label_confirm">确认</string>
    <string name="label_save">保存</string>
    <string name="label_confirm_add_start">开始添加</string>
    <string name="label_confirm_add">确认添加</string>
    <string name="label_password">密码</string>

    <string name="title_weekday_select">日期选择</string>
    <string name="label_week_1">星期一</string>
    <string name="label_week_2">星期二</string>
    <string name="label_week_3">星期三</string>
    <string name="label_week_4">星期四</string>
    <string name="label_week_5">星期五</string>
    <string name="label_week_6">星期六</string>
    <string name="label_week_7">星期日</string>
    <string name="label_week">星期</string>
    <string name="label_week_short_1">一</string>
    <string name="label_week_short_2">二</string>
    <string name="label_week_short_3">三</string>
    <string name="label_week_short_4">四</string>
    <string name="label_week_short_5">五</string>
    <string name="label_week_short_6">六</string>
    <string name="label_week_short_7">日</string>
    <string name="toast_week_lease_one">最少要选中一个</string>
    <string name="label_week_all">每天</string>
    <string name="label_week_workday">工作日</string>


    <string name="label_habit_alarm">提醒铃声</string>
    <string name="label_habit_repeat_type">重复类型</string>
    <string name="label_habit_repeat_date">提醒日期</string>
    <string name="label_habit_repeat_time">提醒时间</string>
    <string name="label_habit_name_input">请输入提醒标题</string>
    <string name="label_every_day">每天</string>
    <string name="toast_play_error">播放失败</string>
    <string name="toast_repeat_type_first">请先选择重复类型</string>
    <string name="toast_repeat_time_first">请选择时间</string>
    <string name="toast_repeat_date_first">请选择重复周期</string>
    <string name="toast_habit_ring_first">先选择铃声</string>

    <string name="title_device_contacts_add">添加联系人</string>
    <string name="title_device_contacts_edit">编辑联系人</string>
    <string name="label_contacts_name">联系人关系</string>
    <string name="label_contacts_phone">联系人电话</string>
    <string name="label_device_relation_header">头像</string>

    <string name="label_device_relation">关系</string>
    <string name="label_device_nick">昵称</string>
    <string name="title_device_relation">与宝贝关系</string>
    <string name="relation_father">爸爸</string>
    <string name="relation_mother">妈妈</string>
    <string name="relation_grand_father">爷爷</string>
    <string name="relation_grand_mother">奶奶</string>
    <string name="relation_grand_pa">外公</string>
    <string name="relation_grand_ma">外婆</string>
    <string name="relation_other">其他</string>
    <string name="label_device_phone">电话</string>
    <string name="label_device_phone_input">请输入联系人电话</string>
    <string name="label_device_nick_input">请输入联系人昵称</string>

    <string name="title_device_wifi">手表WiFi</string>
    <string name="title_device_wifi_add">添加WiFi</string>
    <string name="label_device_wifi_nick">WiFi名称</string>
    <string name="label_device_nick_wifi">请输入WiFi名称</string>
    <string name="label_device_password_wifi">请输入WiFi密码</string>

    <string name="title_User_concerns">家庭成员</string>
    <string name="title_User_concens_add">添加成员</string>

    <string name="title_device_bind_add">添加手表</string>
</resources>
