<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.administrator.buddy.view.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBack="true"
        app:titleText="@string/title_device_wifi_add" />


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/layout_height"
      android:background="@color/colorwhite"
      >
    <TextView
        android:id="@+id/textView_my_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_big"
        android:text="@string/label_device_wifi_nick"
        style="@style/text_big"
        />
    <EditText
        android:id="@+id/edit_contacts_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:hint="@string/label_device_nick_wifi"
        android:minWidth="120dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right|center_vertical"
        style="@style/text_normal"
        android:imeOptions="actionNext"
        android:textColorHint="@color/text_light"
        android:background="@android:color/transparent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_line_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:background="@color/divide_line"
        />
  </RelativeLayout>
  <RelativeLayout
      android:id="@+id/rel_contacts_phone"
      android:layout_width="match_parent"
      android:layout_height="@dimen/layout_height"
      android:background="@color/colorwhite"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_big"
        android:text="@string/label_password"
        style="@style/text_big"
        />
    <EditText
        android:id="@+id/edit_contacts_phone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:minWidth="120dp"
        android:layout_marginRight="20dp"
        android:hint="@string/label_device_password_wifi"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:imeOptions="actionDone"
        style="@style/text_normal"
        android:inputType="phone"
        android:maxLength="11"
        android:gravity="right|center_vertical"
        android:textColorHint="@color/text_light"
        android:background="@android:color/transparent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_line_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:background="@color/divide_line"
        />
  </RelativeLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_confirm_add"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom"
        style="@style/btn"/>

</LinearLayout>
