<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.administrator.buddy.view.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBack="true"
        app:titleText="@string/title_device_contacts_edit" />

    <com.example.administrator.buddy.view.MyItemView
        android:id="@+id/item_contacts_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:item_title="@string/label_device_relation"
        app:item_content="@string/relation_father"
        app:item_arrows="@mipmap/list_right_arrow"
        />

  <RelativeLayout
      android:id="@+id/item_contacts_head"
      android:layout_width="match_parent"
      android:layout_height="@dimen/layout_height"
      android:background="@color/colorwhite"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_big"
        android:text="@string/label_device_relation_header"
        style="@style/text_big"
        />
    <ImageView
        android:id="@+id/img_contacts_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@mipmap/list_right_arrow"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:focusable="false" />
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/textView_my_item_head"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_toLeftOf="@id/img_contacts_right"
        app:actualImageScaleType="centerCrop"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:progressBarAutoRotateInterval="5000"
        app:progressBarImage="@mipmap/head_progress"
        app:progressBarImageScaleType="centerInside"
        app:roundAsCircle="true" />
    <!--<TextView-->
        <!--android:id="@+id/textView_my_item_content"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:maxWidth="250dp"-->
        <!--android:layout_toLeftOf="@id/textView_my_item_arrows"-->
        <!--android:maxLines="1"-->
        <!--android:ellipsize="end"-->
        <!--android:text=""-->
        <!--style="@style/text_big"-->
        <!--android:textSize="@dimen/text_big"-->
        <!--tools:text="description" />-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_line_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:background="@color/divide_line"
        />
  </RelativeLayout>


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/layout_height"
      android:background="@color/colorwhite"
      >
    <TextView
        android:id="@+id/textView_my_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_big"
        android:text="@string/label_device_nick"
        style="@style/text_big"
        />
    <EditText
        android:id="@+id/edit_contacts_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:hint="@string/label_device_nick_input"
        android:minWidth="120dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right|center_vertical"
        style="@style/text_normal"
        android:imeOptions="actionNext"
        android:textColorHint="@color/text_light"
        android:background="@android:color/transparent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_line_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:background="@color/divide_line"
        />
  </RelativeLayout>
  <RelativeLayout
      android:id="@+id/rel_contacts_phone"
      android:layout_width="match_parent"
      android:layout_height="@dimen/layout_height"
      android:background="@color/colorwhite"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_big"
        android:text="@string/label_device_phone"
        style="@style/text_big"
        />
    <EditText
        android:id="@+id/edit_contacts_phone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:minWidth="120dp"
        android:layout_marginRight="20dp"
        android:hint="@string/label_device_phone_input"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:imeOptions="actionDone"
        style="@style/text_normal"
        android:inputType="phone"
        android:maxLength="11"
        android:gravity="right|center_vertical"
        android:textColorHint="@color/text_light"
        android:background="@android:color/transparent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_line_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:background="@color/divide_line"
        />
  </RelativeLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_confirm_add"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom"
        style="@style/btn"/>

</LinearLayout>
